gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    # hostname: "www.example.com"
    allowedRoutes:
      namespaces:
        from: All # if you want to limit the routes to a specific namespace, you can use "From: Same" or "From: Selector"
